# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-03 22:53:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-24

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-24


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 22:39:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-23

    Summary:
      Hacking on Inflate
    Revision:
      missingh--head--0.7--patch-23


    modified files:
     ChangeLog libsrc/MissingH/Compression/Inflate.hs
     libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 22:22:27 GMT	John Goerzen <jgoerzen@complete.org>	patch-22

    Summary:
      Started to use real header
    Revision:
      missingh--head--0.7--patch-22


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 22:15:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-21

    Summary:
      Working prototype
    Revision:
      missingh--head--0.7--patch-21


    new files:
     testsrc/GZiptest.hs testsrc/gzfiles/.arch-ids/=id
     testsrc/gzfiles/.arch-ids/t1.gz.id testsrc/gzfiles/t1.gz

    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs testsrc/Tests.hs

    new directories:
     testsrc/gzfiles testsrc/gzfiles/.arch-ids


2004-12-03 22:03:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-20

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-20


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:54:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-19

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-19


    modified files:
     ChangeLog libsrc/MissingH/FileArchive/GZip.hs


2004-12-03 21:43:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-18

    Summary:
      checkpoint
    Revision:
      missingh--head--0.7--patch-18


    modified files: